--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="top-banner">
-        <div class="half-width">
+        <div id="position" class="half-width">
             <h2>Hello I'm</h2>
             <h1><span class="name-highlight">Nabil</span></h1>
             <p>You might saw me jumping, climbing buildings and stopping trains. But nobody pays me a dime for that work.</p>
@@ -19,5 +19,38 @@
             <img src="images/peter.png" alt="">
         </div>
     </section>
+    <section class="biography-area">
+        <div class="half-width">
+            <img src="images/peter_dream.png" alt="">
+        </div>
+        <div id="biography-position" class="half-width">
+            <h2>Biography</h2>
+            <p>Lorem ipsum is the simply dummy text of the printing and typesetting industry. Lorem ipsum has been the industry's standard dummy text ever since the 1500's when an unknown printer took a gallary of type and scrembled it to make a type</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/feed/?trk=onboarding-landing">DOWNLOAD CV</a>
+        </div>
+    </section>
+    <section class="my-latest-work">
+        <h1><center>MY Latest Work</center></h1>
+        <div class="column">
+            <img src="images/latest-work/work-1.png" alt="" style="width:100%">
+        </div>
+        <div class="column">
+            <img src="images/latest-work/work-2.jpg" alt="" style="width:100%">
+        </div>
+        <div class="column">
+            <img src="images/latest-work/work-3.jpg" alt="" style="width:100%">
+        </div>
+    </section>
+    <section class="client-area">
+        <h1>What Client are say</h1>
+        <h3>Bruce Moccy</h3>
+        <h5>Founder & CEO Alies</h5>
+        <h3>"Lorem Ipsum is simply dummy text of the</h3>
+        <h3>printing and typesetting industry. Lorem Ipsum"</h3>
+        <a class="link-button" target="_blank" href="gmail.com">Leave me a message in the lmnabil00@gmail.com</a>
+    </section>
+    <footer>
+        <p>A Nabil initiative. @ 2020 All rights Reserved.</p>
+    </footer>
 </body>
 </html>
